--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ a {
 }
 h1 {
     text-align: center;
-    color:slateblue;
+    font-size: 200%;
+    color:rgb(90, 76, 184);
     border-bottom: 1px solid slateblue;
     padding-bottom: 20px;
     padding-top: 20px;
@@ -36,4 +37,8 @@ dl {
     align-content: center;
     width:60%;
     margin: 20px;
+}
+.photo {
+    width: 100%;
+    margin-top: 25px;
 }
