resized title font

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ a {
 }
 h1 {
     text-align: center;
-    font-size: 200%;
+    font-size: 45px;
     color:rgb(90, 76, 184);
     border-bottom: 1px solid slateblue;
     padding-bottom: 20px;
