editted some css

--- a/style.css
+++ b/style.css
@@ -3,7 +3,10 @@ body{
     background-color:antiquewhite;
 }
 #active {
-    color: slateblue;
+    color: white;
+    text-decoration: underline white;
+    background-color: slateblue;
+    width: max-content;
 }
 a {
     color:black;
