--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ a {
     text-decoration: none;
 }
 h1 {
+    font-family: 'Berkshire Swash';    text-shadow: 4px 4px 0px rgba(0,0,0,0.1);
     text-align: center;
     font-size: 45px;
     color:rgb(90, 76, 184);
