--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ dl {
     width:100%;
     margin:0;
     padding-left: 30px;
-    padding-top: 40px;
+    padding-top: 10%;
     font-size: 15pt;
     text-shadow: 0.5px 0.5px 2px;
     list-style-type:none;
