--- a/style.css
+++ b/style.css
@@ -42,7 +42,10 @@ dl li a{
 }
 dl li a:hover {
     transition: 0.5s;
-    color : rgb(65, 57, 167);
+    color : rgb(89, 79, 223);
+    -webkit-transform:rotate(180deg);
+    transform:rotate(180deg);
+    background-color: bisque;
 }
 #grid {
     display: grid;
