--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 body{
     margin:0;
     background-color: rgb(15,15,15);
@@ -53,7 +57,8 @@ dl li #selected{
     opacity: 1;
 }
 dl li a:hover {
-    transition: 0.3s;
+    transition: 0.1s;
+    font-size: 16pt;
     opacity: 1;
 }
 #grid {
@@ -70,9 +75,8 @@ dl li a:hover {
 .photo {
     width: 100%;
 }
-
-li {
-    padding-bottom: 40px;
+.gallery__item {
+    padding-bottom: 30px;
 }
 
 .videoWrapper {
@@ -200,4 +204,84 @@ li {
     border: 10px solid #ccc;
     border-color: rgb(30,30,30);
     margin-left: 40%;
+}
+
+ul {
+    list-style: none;
+
+}
+
+.score {
+    text-align: center;
+    font-size: 36px;
+    margin-bottom: 2rem;
+    color: #ccc;
+}
+
+.playground >ul{
+    border: 1px solid #333;
+    width: 250px;
+    margin: 0 auto;
+}
+.playground > ul > li {
+    width: 100%;
+    height: 25px;
+    padding: 0;
+}
+
+.playground > ul > li > ul{
+    display: flex;
+}
+
+.playground > ul > li >ul > li{
+    width:25px;
+    height:25px;
+    outline:1px solid #ccc;
+}
+
+.tBlock {
+    background: rgb(173, 0, 173);
+}
+
+.zBlock{
+    background: red;
+}
+.iBlock{
+    background: skyblue;
+}
+.jBlock{
+    background: blue;
+}
+.lBlock{
+    background: orange;
+}
+.oBlock{
+    background: yellow;
+}
+.sBlock{
+    background: yellowgreen;
+}
+
+
+.game-text {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.7);
+    left: 0;
+    top: 0;
+    color: #fff;
+    font-size: 50px;
+}
+
+.game-text > button {
+    padding: 0.5rem 1rem;
+    color:#fff;
+    background-color: rgba(0,0,0,0.7);
+    border: none;
+    cursor:pointer;
 }
