--- a/style.css
+++ b/style.css
@@ -285,3 +285,17 @@ ul {
     border: none;
     cursor:pointer;
 }
+
+.tetris {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    color: yellow;
+    font-size: 50px;
+}
