--- a/style.css
+++ b/style.css
@@ -296,6 +296,7 @@ ul {
     height: 100%;
     left: 0;
     top: 0;
-    color: yellow;
+    color: rgb(255, 217, 0);
     font-size: 50px;
+    font-weight: bold;
 }
