--- a/style.css
+++ b/style.css
@@ -213,10 +213,15 @@ ul {
 .score {
     text-align: center;
     font-size: 36px;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     color: #ccc;
 }
-
+.stage {
+    text-align: center;
+    font-size: 18px;
+    margin-bottom: 1rem;
+    color: yellowgreen;
+}
 .playground >ul{
     border: 1px solid #333;
     width: 250px;
@@ -277,7 +282,17 @@ ul {
     font-size: 50px;
 }
 
-.game-text > button {
+.game-button {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 100px;
+    font-size: 30px;
     padding: 0.5rem 1rem;
     color:#fff;
     background-color: rgba(0,0,0,0.7);
