--- a/style.css
+++ b/style.css
@@ -311,6 +311,10 @@ ul {
     left: 0;
     top: 0;
     color: rgb(255, 217, 0);
-    font-size: 50px;
-    font-weight: bold;
+    font-size: 30px;
+    font-weight: bolder;
+}
+
+.preview {
+    
 }
