--- a/style.css
+++ b/style.css
@@ -224,6 +224,7 @@ ul {
 }
 .playground >ul{
     border: 1px solid #333;
+    background-color: rgba(30,30,30,0.9);
     width: 250px;
     margin: 0 auto;
 }
