--- a/style.css
+++ b/style.css
@@ -126,6 +126,7 @@ dl li a:hover {
     font-size: 15px;
 }
 
+
 /*Image modal*/
 
 .modal {
@@ -143,7 +144,7 @@ dl li a:hover {
     
     
 }
-
+/*zoom animation*/
 @keyframes zoom {
     from {
         transform: scale(0);
@@ -153,6 +154,7 @@ dl li a:hover {
     }
 }
 
+/*modal img*/
 .modal img {
     height:fit-content;
     width: auto;
@@ -162,7 +164,7 @@ dl li a:hover {
     object-fit: cover;
 }
 
-
+/*close button of modal*/
 .closeBtn {
     color: rgba(255, 255, 255, 0.87);
     font-size: 25px;
@@ -176,6 +178,8 @@ dl li a:hover {
 .closeBtn:hover {
     color: rgb(255, 255, 255);
 }
+
+
 .gallery__item {
     cursor: pointer;
     overflow: hidden;
@@ -192,6 +196,8 @@ dl li a:hover {
     transform: scale(1.03);
 }
 
+
+/*profile*/
 #profile {
     width: 100%;
     padding-top: 20%;
@@ -208,9 +214,8 @@ dl li a:hover {
 
 ul {
     list-style: none;
-
 }
-
+/*game*/
 .score {
     text-align: center;
     font-size: 36px;
@@ -223,6 +228,7 @@ ul {
     margin-bottom: 1rem;
     color: yellowgreen;
 }
+/*tetris grid*/
 .playground >ul{
     border: 1px solid #333;
     background-color: rgba(30,30,30,0.9);
@@ -244,7 +250,7 @@ ul {
     height:25px;
     outline: rgba(255, 255, 255, 0.9);
 }
-
+/*tetris blocks*/
 .tBlock {
     background: rgb(173, 0, 173);
     opacity: 0.9;
@@ -330,3 +336,55 @@ ul {
 .high-scores{
     text-align: left;
 }
+
+/*footer*/
+.footer-dark {
+    padding:10px 0;
+    color:#f0f9ff;
+    background-color:#16181b;
+  }
+  
+  
+  .footer-dark ul {
+    padding:0;
+    list-style:none;
+    line-height:1.6;
+    font-size:14px;
+    margin-bottom:0;
+  }
+  
+
+  
+  
+  
+  .footer-dark .item.social {
+    text-align:center;
+    padding-top:20px;
+  }
+  
+  .footer-dark .item.social > a {
+    font-size:20px;
+    width:36px;
+    height:36px;
+    line-height:36px;
+    display:inline-block;
+    text-align:center;
+    border-radius:50%;
+    box-shadow:0 0 0 1px rgba(255,255,255,0.4);
+    margin:0 8px;
+    color:#fff;
+    opacity:0.75;
+  }
+  
+  .footer-dark .item.social > a:hover {
+    opacity:0.9;
+  }
+  
+  .footer-dark .copyright {
+    text-align:center;
+    padding-top:5px;
+    opacity:0.3;
+    font-size:13px;
+    margin-bottom:0;
+  }
+  
