--- a/style.css
+++ b/style.css
@@ -334,6 +334,7 @@ ul {
     color: rgb(255, 217, 0);
     font-size: 30px;
     font-weight: bolder;
+    -webkit-text-stroke: 0.2px red;
     z-index: 1;
 }
 
