--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
 }
 body{
     margin:0;
+    height:100vh;
+    display:flex;
+    flex-direction: column;
     background-color: rgb(15,15,15);
 }
 #active {
@@ -65,6 +68,7 @@ dl li a:hover {
     display: grid;
     grid-template-columns: 3.5fr;
     justify-content: center;
+    padding-bottom: 60px;
     margin: 0 auto;
 }
 #rashi {
@@ -229,6 +233,7 @@ ul {
     color: yellowgreen;
 }
 /*tetris grid*/
+
 .playground >ul{
     border: 1px solid #333;
     background-color: rgba(30,30,30,0.9);
@@ -344,7 +349,7 @@ ul {
 
 /*footer*/
 .footer-dark {
-    padding:10px 0;
+    margin-top:auto;
     color:#f0f9ff;
     background-color:#16181b;
   }
