--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -458,7 +458,7 @@ ul {
       color:#ccc;
       font-size: 30px;
       text-align: center;
-      margin-top: 5.5rem;
+      margin-top: 3.5rem;
       position:absolute;
       left: 0; 
       right: 0; 
@@ -471,11 +471,14 @@ ul {
   }
 
   #scan-button {
-    margin-top: 10rem;
+    height: 3.5rem;
+    margin-top: 7rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
     display:flex;
     align-items: center;
     justify-content: center;
     font-size: 30px; 
-    border-radius: 10%; 
+    border-radius: 1.75rem; 
     background-color: cornsilk;
   }
