--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -480,6 +480,7 @@ ul {
     align-items: center;
     justify-content: center;
     font-size: 30px; 
+    color:rgba(0, 0, 0, 0.9);
     border-radius: 1.75rem; 
     background-color: cornsilk;
   }
