font size resizable according to the viewport width

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -504,6 +504,7 @@ ul {
     align-items: center;
     justify-content: center;
     display:none;
-    font-size: 30px;
+    font-size: 8px;
+    font-size: 4vw;
 
 }
