--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -226,6 +226,7 @@ ul {
 /*game*/
 .score {
     text-align: center;
+    font-family: 'Karma', sans-serif;    
     padding-right: 8.5rem;
     font-size: 32px;
     margin-bottom: 1rem;
@@ -233,16 +234,19 @@ ul {
 }
 .info {
     padding-bottom:1rem;
+    font-family: 'Karma', sans-serif;    
     align-items: center;
 }
 .stage {
     text-align: left;
+    font-family: 'Karma', sans-serif;
     font-size: 18px;
     margin-bottom: 1rem;
     color: yellowgreen;
 }
 .next-level {
-    margin-left: 5.5rem;
+    margin-left: 5rem;
+    font-family: 'Karma', sans-serif;
     text-align: right;
     font-size: 16px;
     margin-bottom: 1rem;
@@ -271,7 +275,10 @@ ul {
 .playground > ul > li >ul > li{
     width:25px;
     height:25px;
-    outline: rgba(255, 255, 255, 0.9);
+    /* outline: rgba(255, 255, 255, 0.9); */
+    border-bottom: rgba(29,29,29,0.15) solid 1.5px;
+    border-top: rgba(29,29,29,0.15) solid 1.5px;
+    border-right:rgba(29,29,29,0.15) solid 1.5px;
 }
 /*tetris blocks*/
 .tBlock {
@@ -367,7 +374,7 @@ ul {
     z-index: 2;
 }
 #next {
-    padding-left: 2.7rem;
+    padding-left: 2.2rem;
     color:#ccc;
 }
 .wrapper {
