--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -385,16 +385,14 @@ ul {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding-right:8.5rem;
     position: fixed;
     width: 100%;
     height: 100%;
-    left: 0;
+    left: 0.5rem;
     top: 0;
     color: rgb(255, 217, 0);
     font-size: 30px;
     font-weight: bolder;
-    -webkit-text-stroke: 0.2px red;
     z-index: 1;
 }
 
