--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ dl li a:hover {
 #grid {
     display: grid;
     justify-content: center;
-    padding-bottom: 60px;
+    padding-bottom: 2rem;
     margin: 0 auto;
 }
 
@@ -89,7 +89,7 @@ dl li a:hover {
 #column .videoWrapper {
     display: inline-table;
 	position:relative;
-    margin-bottom: 35px;
+    margin-bottom: 2rem;
 	padding-bottom: 56.25%; /* 16:9 */
 	height: 50px;
     width: 100%;
@@ -149,6 +149,7 @@ dl li a:hover {
     
     
 }
+
 /*zoom animation*/
 @keyframes zoom {
     from {
@@ -167,6 +168,7 @@ dl li a:hover {
     max-width: 90%;
     overflow-x: scroll;
     object-fit: cover;
+    cursor: pointer;
 }
 
 /*close button of modal*/
@@ -189,7 +191,7 @@ dl li a:hover {
     cursor: pointer;
     overflow: hidden;
     border-radius: 4px;
-    padding-bottom: 35px;
+    padding-bottom: 2rem;
 
 }
 
@@ -287,7 +289,7 @@ ul {
 }
 
 .zBlock{
-    background: red;
+    background: rgb(238, 3, 3);
     opacity: 0.9;
 }
 .iBlock{
