--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,7 +82,7 @@ padding-top: 0.6rem;
 left:0;
 display:none; /* hides sublists */
 }
-@media (min-width:800px) {
+@media (min-width:600px) {
     .navLinks li:hover ul {display:flex;} 
     dl li a:hover {
         transition: 0.1s;
@@ -524,7 +524,7 @@ ul {
       margin-right: auto; 
       width: 100%;
   }
-  @media only screen and (max-width: 800px) {
+  @media only screen and (max-width: 600px) {
     h1 {font-size: 8vw;}
     #column figure figcaption {
         font-size:22px;
@@ -540,17 +540,15 @@ ul {
         width:70%;
         height:60%;
         text-align: center;
-        background: #202020;
+        /* background: #202020; */
+        background-color: rgb(17,17,17);
         font-size: 9.5vw;
         transition: transform 0.3s ease;
-        box-shadow: 0px 1px 5px rgba(1, 0, 36, 0.5);
+        box-shadow: 0px 1px 4px rgba(131, 131, 131, 0.5);
       }
        .navLinks li {
         padding-bottom: 1.7vh;
         border: #ccc 4px!important;
-      }
-      .navLinks li a {
-          /* padding-bottom: 1rem; */
       }
       .navLinks ul {
           font-size: 70%;
