--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -392,7 +392,6 @@ ul {
     padding-left: 1rem;
 }
 .preview >ul{
-    
     width: 100px;
     margin: 0 auto;
 }
@@ -532,6 +531,9 @@ ul {
     #column figure figcaption {
         font-size:22px;
     }
+    .wrapper{
+        padding-left: 1rem;
+    }
     #logo{max-height: 4vh;}
       .navLinks {
         padding-bottom: 1rem;
@@ -600,6 +602,32 @@ ul {
       .burger.active .bar:nth-child(3) {
           transform: translateY(-10.4px) rotate(-45deg);
       }
+      .playground >ul{
+        border: 1px solid #333;
+        background-color: rgba(30,30,30,0.9);
+        width: 230px;
+        margin: 0 auto;
+    }
+    .playground > ul > li {
+        width: 100%;
+        height: 23px;
+        padding: 0;
+    }
+    .next-level{
+        margin-left: 3rem;
+    }
+    .playground > ul > li > ul{
+        display: flex;
+    }
+    
+    .playground > ul > li >ul > li{
+        width:23px;
+        height:23px;
+        /* outline: rgba(255, 255, 255, 0.9); */
+        border-bottom: rgba(29,29,29,0.15) solid 0.8px;
+        border-top: rgba(29,29,29,0.15) solid 0.8px;
+        border-right:rgba(29,29,29,0.15) solid 0.8px;
+    }
   }
 
   #scan-button {
