--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,11 +37,11 @@ h1 {
   }
   .bar {
     display:block;
-    width: 32.5px;
+    width: 25px;
     top: 0;
     right: 0;
-    height: 3.9px;
-    margin: 6.8px auto;
+    height: 3px;
+    margin: 5px auto;
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
     background-color: #101010;
@@ -536,19 +536,19 @@ ul {
     }
     #logo{max-height: 4vh;}
       .navLinks {
-        padding-bottom: 1rem;
+        padding-top: 1rem;
         justify-content:space-evenly;
         /* justify-content:space-evenly !important; */
         position: fixed;
         left: -101%;
         top: 1rem;
         flex-direction: column;
-        width:70%;
-        height:60%;
+        width: 50%;
+        height: 40%;
         text-align: center;
         /* background: #202020; */
         background-color: rgb(17,17,17);
-        font-size: 8vw;
+        font-size: 5vw;
         transition: transform 0.3s ease;
         box-shadow: 0px 1px 4px rgba(131, 131, 131, 0.5);
       }
@@ -574,7 +574,8 @@ ul {
           display: contents !important;
       }
       .navLinks.active {
-          left:30%;
+          left:50%;
+          top:0%
       }
       .navLinks {
           margin: 0 0;
@@ -597,10 +598,10 @@ ul {
           opacity: 0;
       }
       .burger.active .bar:nth-child(1) {
-          transform: translateY(10.4px) rotate(45deg);
+          transform: translateY(8px) rotate(45deg);
       }
       .burger.active .bar:nth-child(3) {
-          transform: translateY(-10.4px) rotate(-45deg);
+          transform: translateY(-8px) rotate(-45deg);
       }
       .playground >ul{
         border: 1px solid #333;
