--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -647,18 +647,21 @@ ul {
   }
 
   #scan-button {
-    height: 5.5rem;
+    height: 8.5rem;
     width:100%;
     margin-top: 7rem;
     padding-left: 1rem;
     padding-right: 1rem;
+    font-weight: bold;
     display:flex;
     align-items: center;
     justify-content: center;
     font-size: 30px; 
-    color:rgba(0, 0, 0, 0.9);
-    border-radius: 1.75rem; 
-    background-color: cornsilk;
+    text-shadow: 2.5px 2.5px 4px rgba(97, 97, 97, 0.7);
+    box-shadow: 2px 2px 4px rgba(255, 248, 220, 0.315);
+    color:rgb(46, 45, 45);
+    border-radius: 4rem; 
+    background-color: rgb(204, 138, 53);
   }
 
   video {
