--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -690,9 +690,30 @@ ul {
     align-content: center;
     padding-bottom: 8%;
 }
-::input[type="file"] {
-    z-index: 100;
-}
+.collapsible {
+    background-color: rgb(20, 20, 20);
+    color: rgb(163, 163, 163);
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+  }
+  
+  /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+  .active, .collapsible:hover {
+    background-color: rgb(30, 30, 30);
+  }
+  
+  /* Style the collapsible content. Note: hidden by default */
+  .content {
+    padding: 0 18px;
+    display: none;
+    overflow: hidden;
+    background-color: rgb(20, 20, 20);
+  }
 #upload-button {
     height: 8.5rem;
     width:100%;
