--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -651,6 +651,10 @@ ul {
     #dog-breed {
     font-size: 21px;
     }
+    #upload-label {
+        display: block!important;
+        padding:unset !important;
+    }
   }
 
   #scan-button {
@@ -683,6 +687,11 @@ ul {
     color:rgb(46, 45, 45);
     background-color: rgb(204, 138, 53);
     border-radius: 1rem;
+  }
+  #upload-label {
+      display: inline-block;
+      padding: 1rem 0rem 1rem 0rem;
+      width:100%;
   }
   input[type="file"] { position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip:rect(0,0,0,0); border: 0; }
 
