--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -690,7 +690,7 @@ ul {
   }
   #upload-label {
       display: inline-block;
-      padding: 1rem 0rem 1rem 0rem;
+      padding: 1rem 0rem 1rem;
       width:100%;
   }
   input[type="file"] { position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip:rect(0,0,0,0); border: 0; }
